--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,8 @@
 
 <body>
     <h1>This is Home Page</h1>
-    <h2>Render from html file </h2>
+    <h2>Render from html file</h2>
+    <a href="/user/sign-up">Sign-Up</a>
 </body>
 
 </html>
