done with passport-auth and multer setup

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,5 @@
-<html>
+<link rel="stylesheet" href="/css/home.css" />
 
-<head></head>
-
-<body>
-    <h1>This is Home Page</h1>
-    <h2>Render from html file</h2>
-    <a href="/user/sign-up">Sign-Up</a>
-</body>
-
-</html>
+<h1>This is Home Page</h1>
+<h2>Render from html file</h2>
+<a href="/user/sign-up">Sign-Up</a>
