--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -1,10 +1,10 @@
 <div>
     <h1>This is Sign Up Page</h1>
     <form action="/user/create" method="POST">
-        <input type="text" name="name" placeholder="Type Name.." />
-        <input type="email" name="email" placeholder="Type Email.." />
-        <input type="password" name="password" placeholder="Type password.." />
-        <input type="password" name="confirm_password" placeholder="Type Confirm pass.." />
+        <input type="text" required name="name" placeholder="Type Name.." />
+        <input type="email" required name="email" placeholder="Type Email.." />
+        <input type="password" required name="password" placeholder="Type password.." />
+        <input type="password" required name="confirm_password" placeholder="Type Confirm pass.." />
         <input type="submit" value="Sign-Up" />
     </form>
 </div>
