--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -5,6 +5,12 @@
 <body>
     <h1>This is User Profile Page</h1>
     <h2>Render from html file</h2>
+    <%= locals.user.name%>
+
+        <form action="/user/update" method="POST" enctype="multipart/form-data">
+            <input type="file" name="avatar" multiple />
+            <input type="submit" />
+        </form>
 </body>
 
 </html>
