--- a/views/layouts/some_layout.ejs
+++ b/views/layouts/some_layout.ejs
@@ -12,8 +12,8 @@
         <%=locals.title%>
     </h1>
     <%-body-%>
-        <%-include('../partials/_footer');-%>
-            <%- script %>
+        <!-- <%-include('../partials/_footer');-%> -->
+        <%- script %>
 </body>
 
 </html>
