--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -42,7 +42,7 @@
         </div>
         <div>
             <form action="/search" method="POST">
-                <input type="text" name="name" required placeholder="Search here" style="background-color: rgb(238, 238, 238)" />
+                <input type="text" name="name" required placeholder="Search users" style="background-color: rgb(238, 238, 238)" />
                 <input type="submit" value="s" />
             </form>
         </div>
