--- a/assets/css/comment.css
+++ b/assets/css/comment.css
@@ -3,7 +3,7 @@
   background-color: white;
   margin: 0px;
   padding: 0px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   display: none;
   box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
   transition: 0.4;
@@ -18,20 +18,21 @@
 .comment-container .comments {
   display: flex;
   flex-direction: column;
-  padding: 10px;
-  margin: 10px;
-  width: 90%;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
 }
 
 .comment-container .comments .comment {
-  padding: 4px;
+  padding: 15px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   box-shadow: 0px 0.4px 0.4px 0.4px rgba(0, 0, 0, 0.2);
   transition: 0.4;
-  margin-bottom: 10px;
-  width: 98%;
+  margin-top: 15px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .comment-container .comments .comment:hover {
