--- a/assets/css/my-profile-page.css
+++ b/assets/css/my-profile-page.css
@@ -2,9 +2,9 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 50%;
-  min-width: 400px;
-  left: 10%;
+  width: 45%;
+  min-width: 700px;
+  left: 8%;
 }
 
 #my-profile {
@@ -245,6 +245,7 @@
 }
 
 #all-posts div div {
+  margin: 10px;
   border: 1px solid gray;
   box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.2);
   transition: 0.4;
