--- a/assets/css/user_posts.css
+++ b/assets/css/user_posts.css
@@ -1,6 +1,24 @@
-#user_posts {
+#user_posts,
+#save_items {
   width: 37%;
   min-width: 400px;
   margin: auto;
   position: relative;
+  padding-top: 20px;
+}
+
+#user_posts #detail-head,
+#save_items #detail-head {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  box-sizing: border-box;
+  box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.164);
+  z-index: 999999999;
+  position: sticky;
+  top: 52px;
+  height: 95px;
+  margin-bottom: 15px;
 }
