--- a/assets/scss/my-profile-page.scss
+++ b/assets/scss/my-profile-page.scss
@@ -2,9 +2,9 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 50%;
-    min-width: 400px;
-    left: 10%;
+    width: 45%;
+    min-width: 700px;
+    left: 8%;
 }
 
 #my-profile {
@@ -202,8 +202,10 @@
         display: flex;
         flex-direction: row;
         margin: 10px;
+        // margin: auto;
         flex-wrap: wrap;
         div {
+            margin: 10px;
             border: 1px solid gray;
             box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.2);
             transition: 0.4;
