--- a/views/new_poll_page.ejs
+++ b/views/new_poll_page.ejs
@@ -15,7 +15,7 @@
                 <input type="text" name="no_option" placeholder="NO" value="NO" style="color: rgb(201, 124, 93)" />
             </div>
             <div>
-                <button type="submit" id="submit" class="btn btn-primary">Post</button>
+                <button type="submit" id="submit" class="btn btn-primary">Add</button>
             </div>
         </form>
     </div>
