--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,13 +1,95 @@
+<link rel="stylesheet" href="/css/login_page.css" />
 <div>
-    <form action="/create-session" method="POST">
-        <input type="email" required name="email" placeholder="Type Email.." />
-        <input type="password" required name="password" placeholder="Type password.." />
-        <input type="radio" name="tick" value="Student" checked />
-        <span>Student</span>
-        <input type="radio" name="tick" value="Staff" />
+    <div id="container">
+        <div id="ear-container">
+            <div class="ear" id="left-ear"></div>
+
+            <div class="ear" id="right-year"></div>
+        </div>
+
+        <div id="face">
+            <div id="eye-container">
+                <div class="eye" id="left-eye">
+                    <div class="eye-white">
+                        <div class="eye-manik"></div>
+                    </div>
+                </div>
+                <div class="eye" id="right-eye">
+                    <div class="eye-white">
+                        <div class="eye-manik"></div>
+                    </div>
+                </div>
+            </div>
+            <div id="mouth"></div>
+        </div>
+        <div id="stomach"></div>
+        <!-- <div id="feet-container"> -->
+        <div class="feet" id="left-feet">
+            <div class="feet-finger">
+                <div class="little-finger"></div>
+                <div class="little-finger"></div>
+                <div class="little-finger"></div>
+            </div>
+            <div class="big-finger"></div>
+        </div>
+        <div class="feet" id="right-feet">
+            <div class="feet-finger">
+                <div class="little-finger"></div>
+                <div class="little-finger"></div>
+                <div class="little-finger"></div>
+            </div>
+            <div class="big-finger"></div>
+        </div>
+        <!-- </div> -->
+        <div id="slide-container">
+            <div id="login-form">
+                <form action="/create-session" method="POST">
+                    <br />
+                    <br />
+                    <input type="text" name="email" oninput="handleInputChange(event)" onfocus="handleInputChange(event)" placeholder="Type Email .." />
+                    <br />
+                    <br />
+                    <input type="password" name="password" id="" placeholder="password" onfocus="slideup(event)" onfocusout="slidedown(event)" />
+                    <br />
+                    <br />
+                    <input type="radio" name="tick" value="Student" checked />
+                    <span>Student</span>
+                    <input type="radio" name="tick" value="Staff" />
+                    <span>Staff</span>
+                    <input type="radio" name="tick" value="Club" />
+                    <span>Club</span>
+                    <br />
+                    <br />
+                    <button style="margin-left: 45px">Sign-in</button>
+                    <!-- <input type="submit" value="Sign-In" style="margin-left: 45px" /> -->
+                </form>
+            </div>
+            <!-- <div id="hand-container"> -->
+            <div class="hand" id="left-hand">
+                <div class="finger"></div>
+                <div class="finger"></div>
+                <div class="finger"></div>
+            </div>
+            <div class="hand" id="right-hand">
+                <div class="finger"></div>
+                <div class="finger"></div>
+                <div class="finger"></div>
+            </div>
+            <!-- </div> -->
+        </div>
+    </div>
+
+    <!--rm action="/create-session" method="POST ">
+    <input type="email " required name="email " placeholder="Type Email.. " />
+    <input type="password " required name="password " placeholder="Type password.. " />
+        <input type="radio " name="tick " value="Student " checked />
+    <span>Student</span>
+        <input type="radio " name="tick " value="Staff " />
         <span>Staff</span>
-        <input type="radio" name="tick" value="Club" />
+        <input type="radio " name="tick " value="Club " />
         <span>Club</span>
-        <input type="submit" value="Sign-In" />
-    </form>
+        <input type="submit " value="Sign-In " />
+    </form> -->
 </div>
+
+<script src="/js/login.js"></script>
